@@ -1,5 +1,12 @@
 2002-08-03  Theodore A. Roth  <troth@verinet.com>
 
+	* configure.in(AM_INIT_AUTOMAKE): Bump version.
+	* configure.in: Add AVR_LIBC_USER_MANUAL.
+	* doc/api/Makefile.am: Use AVR_LIBC_USER_MANUAL instead of hard coded name.
+	* doc/api/doxygen.config.in: Ditto.
+
+2002-08-03  Theodore A. Roth  <troth@verinet.com>
+
 	* doc/api/Makefile.am: Change osavr -> avr-libc.
 	* doc/api/doxygen.config.in: Ditto.
 
